--- a/phase-1/fundamentals/introduction/beginning/index.html
+++ b/phase-1/fundamentals/introduction/beginning/index.html
@@ -9,3 +9,10 @@
   2. Write an <html> element consisting of a <head> and <body>.
   3. Link this file to `index.js`, so that the browser loads that file **after** loading the <body>.
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+
+
+</html>
