--- a/phase-1/manipulation/beginning/index.html
+++ b/phase-1/manipulation/beginning/index.html
@@ -22,5 +22,11 @@
       <p id="tomorrow">Tomorrow.</p>
       <p id="forever">Forever?</p>
     </div>
+    <form>
+      <label>Date
+        <input type="date">
+      </label>
+      <input type="submit">
+    </form>
   </body>
 </html>
